--- a/pawpers-angular/src/app/profile-email/profile-email.component.html
+++ b/pawpers-angular/src/app/profile-email/profile-email.component.html
@@ -26,5 +26,5 @@
     What will you do if the dog gets sick and needs medication?: {{profile.profileMedfordog}}<br>
     What will you do if you are unable to care for the dog?: {{profile.profileNocaredog}}<br>
 ">
-    <button type="submit" value="Send">Send Email</button>
+    <button class="btn btn-link" value="Send"><img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Farm-Fresh_email.png" alt="email profile"></button>
 </form>
