--- a/pawpers-angular/src/app/reply-page/reply-page.component.html
+++ b/pawpers-angular/src/app/reply-page/reply-page.component.html
@@ -25,7 +25,7 @@
                                     <strong class="text-success">{{reply.profile.profileName}}</strong>
                                     <br>
                                     <span class="text-muted">
-                                        <small class="text-muted">{{reply.replyTimestamp}}</small>
+                                        <small class="text-muted">{{reply.replyTimestamp | date}}</small>
                                     </span>
                                     <p>{{reply.replyMessage}}</p>
                                 </div>
