--- a/pawpers-angular/src/app/navbar/navbar.component.html
+++ b/pawpers-angular/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" id="pawpers-navbar">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Pawpers</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" [routerLink]="['/dogsearch-page']">Find A Dog</a>
+                    <a class="nav-link" aria-current="page" [routerLink]="['/dogsearch-page']">Find A Dog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" [routerLink]="['/sheltersearch-page']">Find A Shelter</a>
+                    <a class="nav-link" aria-current="page" [routerLink]="['/sheltersearch-page']">Find A Shelter</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" [routerLink]="['/topic-page']">Discussion</a>
