added input validation on search bars

--- a/pawpers-angular/src/app/dog-search/dog-search.component.html
+++ b/pawpers-angular/src/app/dog-search/dog-search.component.html
@@ -8,6 +8,7 @@
                 </div>
             </div>
         </form>
+        <p class="error">{{displayMessage2}}</p>
 
 
         <form #breedSearch="ngForm" (ngSubmit)="breedSearchOnClick(breedSearch.value)">
@@ -18,6 +19,7 @@
                 </div>
             </div>
         </form>
+        <p class="error">{{displayMessage1}}</p>
     </div>
 
     <div class="container justify-content-evenly">
