--- a/pawpers-angular/src/app/addtopic/addtopic.component.html
+++ b/pawpers-angular/src/app/addtopic/addtopic.component.html
@@ -6,15 +6,27 @@
         <select class="form-control" name="category" formControlName="categoryId">
         <option value="1">General</option>
     </select>
-        <br/>
+    <div *ngIf="category?.touched">
+        <div class="text-danger" *ngIf="category?.errors?.['required']">This field is required</div>
+    </div>     
+    <br/>
 
         <label for="topicName">Topic Name</label>
         <input class="form-control" name="topicName" formControlName="topicName">
+        <div *ngIf="topicName?.touched">
+            <div class="text-danger" *ngIf="topicName?.errors?.['required']">This field is required</div>
+        </div>
         <br>
         <label for="topicBody">Topic Message</label>
         <textarea class="form-control" name="topicBody" formControlName="topicBody" style="overflow:auto;resize:none" rows="13" cols="200" placeholder="Enter text here...">
     </textarea>
-        <br>
+    <div *ngIf="topicBody?.touched">
+        <div class="text-danger" *ngIf="topicBody?.errors?.['required']">This field is required</div>
+    </div>    
+    <br>
         <button class="btn btn-primary " (click)="addTopic(topicGroup)">Submit</button>
     </form>
+    <h4 class="error">{{displayMessage}}</h4>
 </div>
+<br>
+<br>
