--- a/pawpers-angular/src/app/shelter-search/shelter-search.component.html
+++ b/pawpers-angular/src/app/shelter-search/shelter-search.component.html
@@ -1,9 +1,9 @@
 <h2>Shelter Search</h2>
 <form #zipSearch="ngForm" (ngSubmit)="onClickSubmit(zipSearch.value)">
-    <input type="text" name="zipCode" placeholder="zip code" ngModel>
+    <input type="text" name="zipCode" placeholder="zip code" ngModel required>
     <button type="submit">Search</button> 
 </form>
-
+<p class="error">{{displayMessage}}</p>
 <table *ngIf="show" class="table table-responsive table-hover">
     <thead>
         <th scope="col">Name</th>
@@ -24,7 +24,7 @@
                 </a>
             </td>
 
-            <button class="btn btn-primary" [routerLink]="['../shelterview-page/' + org.id]">View</button>
+            <button type="submit" class="btn btn-primary" [routerLink]="['../shelterview-page/' + org.id]">View</button>
             </tr>
     </tbody>
 </table>
