--- a/pawpers-angular/src/app/favorites-page/favorites-page.component.html
+++ b/pawpers-angular/src/app/favorites-page/favorites-page.component.html
@@ -1,4 +1,4 @@
-<div class="container px-4 py-5" id="custom-cards">
+<div class="container px-4 py-5" id="custom-cards" *ngIf="favorites[0] != null">
     <div class="row row-cols-1 row-cols-md-2 align-items-stretch g-4 py-5">
         <div class="col" *ngFor="let favorite of favorites">
             <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('{{favorite.photos[0].small}}'); background-size:cover; background-repeat: no-repeat;">
