--- a/pawpers-angular/src/app/reply-page/reply-page.component.html
+++ b/pawpers-angular/src/app/reply-page/reply-page.component.html
@@ -20,7 +20,7 @@
 
                         <hr>
                         <ul class="media-list" *ngFor="let reply of topic.replies.$values">
-                            <li class="media">
+                            <li class="media border">
                                 <div class="media-body">
                                     <strong class="text-success">{{reply.profile.profileName}}</strong>
                                     <br>
