--- a/pawpers-angular/src/app/app.component.html
+++ b/pawpers-angular/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-navbar></app-navbar>
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
+        <div>
+            <app-navbar></app-navbar>
+        </div>
+    </header>
 
-<router-outlet></router-outlet>
+    <main class="px-3">
+        <router-outlet></router-outlet>
+    </main>
+</div>
