--- a/pawpers-angular/src/app/favorites-page/favorites-page.component.html
+++ b/pawpers-angular/src/app/favorites-page/favorites-page.component.html
@@ -1,9 +1,24 @@
-<div class="container px-4 py-5" id="custom-cards" *ngIf="favorites[0] != null">
-    <div class="row row-cols-1 row-cols-md-2 align-items-stretch g-4 py-5">
-        <div class="col" *ngFor="let favorite of favorites">
-            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('{{favorite.photos[0].small}}'); background-size:cover; background-repeat: no-repeat;">
-                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                    <h5 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"><a href="../dogview-page/{{favorite.dogId}}">{{favorite.name}}</a></h5>
+<div class="album p-2 mt-4 bg-light">
+    <div class="container">
+        <h3 class="text-dark">Your Favorites</h3>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-6 g-6">
+            <div class="col" *ngFor="let favorite of favorites">
+                <div class="card shadow-sm bg-secondary">
+                    <img *ngIf="favorite.photos[0]; else altImg" src={{favorite.photos[0].medium}} alt="doggo photo">
+                    <ng-template #altImg>
+                        <img height="100px" width="100px" src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Missing_dog_photo.png" alt="missing image">
+                    </ng-template>
+
+                    <div class="card-body">
+                        <p class="card-text">
+                            {{favorite.name}}<br>
+                        </p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button class="btn btn-sm btn-dark" [routerLink]="['../dogview-page/' + favorite.id]">View</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
