--- a/pawpers-angular/src/app/reply-page/reply-page.component.html
+++ b/pawpers-angular/src/app/reply-page/reply-page.component.html
@@ -1,40 +1,28 @@
 <div class="container">
-    <div class="row bootstrap snippets bootdeys">
-        <div class="col-md-8 col-sm-12">
-            <div class="comment-wrapper">
-                <div class="panel panel-info">
-                    <div class="">
-                        <h2>{{topic.topicName}}</h2>
-                        <p>{{topic.profile.profileName}}</p>
-                        <p>{{topic.postTimestamp}}</p>
-                        <p>{{topic.topicBody}}</p>
-                    </div>
-                    <br>
-                    <div class="panel-body">
-                        <br>
-                        <div>
-                            <button (click)="showOnClick()" class="btn btn-primary">Add Reply</button>
-                            <app-add-reply *ngIf="show"></app-add-reply>
-                        </div>
-                        <br>
+    <div class=" bg-secondary d-flex align-items-center justify-content-between p-3 my-3 text-white bg-purple rounded shadow-sm">
+        <div class="">
+            <h2>{{topic.topicName}}</h2>
+            <p>{{topic.profile.profileName}}</p>
+            <small>{{topic.postTimestamp | date}}</small>
+            <p>{{topic.topicBody}}</p>
+        </div>
+        <button (click)="showOnClick()" class="btn btn-primary">Add Reply</button>
+        <app-add-reply *ngIf="show"></app-add-reply>
+    </div>
 
-                        <hr>
-                        <ul class="media-list" *ngFor="let reply of topic.replies.$values">
-                            <li class="media border">
-                                <div class="media-body">
-                                    <strong class="text-success">{{reply.profile.profileName}}</strong>
-                                    <br>
-                                    <span class="text-muted">
-                                        <small class="text-muted">{{reply.replyTimestamp | date}}</small>
-                                    </span>
-                                    <p>{{reply.replyMessage}}</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+    <div class="my-3 p-3 bg-body rounded shadow-sm">
+        <h6 class="border-bottom pb-2 mb-0">All Topics</h6>
+        <div *ngFor="let reply of topic.replies.$values">
+            <div class="d-flex text-muted pt-3">
+                <img class="flex-shrink-0 me-2 rounded" height="32" width="32" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Echo_edit-user-talk_icon.svg/240px-Echo_edit-user-talk_icon.svg.png" alt="chat head icon">
+
+                <p class="pb-3 mb-0 small lh-sm border-bottom">
+                    <strong class="d-block text-gray-dark">{{reply.profile.profileName}}</strong> {{reply.replyMessage}}
+                </p>
             </div>
-
+            <small class="d-block text-end mt-3">
+                {{reply.replyTimestamp | date}}
+          </small>
         </div>
     </div>
 </div>
