--- a/pawpers-angular/src/app/shelter-search/shelter-search.component.html
+++ b/pawpers-angular/src/app/shelter-search/shelter-search.component.html
@@ -1,37 +1,37 @@
-<div class="container col-md-8">
-    <div class="d-flex justify-content-evenly">
-        <form #zipSearch="ngForm" (ngSubmit)="onClickSubmit(zipSearch.value)">
-            <div class="input-group mb-2">
-                <input class="form-control" type="text" name="zipCode" placeholder="zip code" ngModel>
-                <button type="submit" class="btn btn-outline-secondary">Search</button>
-            </div>
-        </form>
+<section class="py-5 text-center container">
+    <div class="row py-lg-4">
+        <div class="col-lg-6 col-md-8 mx-auto">
+            <form #zipSearch="ngForm" (ngSubmit)="onClickSubmit(zipSearch.value)">
+                <div class="input-group mb-2">
+                    <input class="form-control" type="text" name="zipCode" placeholder="zip code" ngModel>
+                    <button type="submit" class="btn btn-outline-secondary">Search</button>
+                </div>
+            </form>
+
+        </div>
     </div>
-
-    <div class="container justify-content-evenly">
-        <table class="" *ngIf="show" class="table table-striped table-hover">
-            <thead>
-                <th scope="col">Name</th>
-                <th scope="col">Email</th>
-                <th scope="col">City</th>
-                <th scope="col">Distance</th>
-                <th scope="col">Social Media</th>
-            </thead>
-            <tbody>
-                <tr *ngFor="let org of searchResults">
-                    <td>{{org.name}}</td>
-                    <td>{{org.email}}</td>
-                    <td>{{org.address.city}}</td>
-                    <td>{{org.distance}}</td>
-                    <td>
-                        <a *ngIf="org.social_media.facebook" href={{org.social_media.facebook}}>
-                            <img height="25px" width="25px" src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Facebook-new.png" alt="facebook icon">
-                        </a>
-                    </td>
-
-                    <button class="btn btn-primary" [routerLink]="['../shelterview-page/' + org.id]">View</button>
-                </tr>
-            </tbody>
-        </table>
+</section>
+<div class="container py-4">
+    <div class="row mb-2">
+        <div class="col-md-6" *ngFor="let org of searchResults">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative text-white bg-secondary">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <h3 class="mb-0">{{org.name}}</h3>
+                    <div class="mb-1 text-muted">{{org.email}}</div>
+                    <p class="card-text mb-auto">{{org.address.city}}<span *ngIf="org.distance">, {{org.distance}} mi. away</span></p>
+                    <a *ngIf="org.social_media.facebook" href={{org.social_media.facebook}}>
+                        <img height="25px" width="25px" src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Facebook-new.png" alt="facebook icon">
+                    </a>
+                    <br>
+                    <button class="btn btn-sm btn-dark" [routerLink]="['../shelterview-page/' + org.id]">View</button>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <img width="200" height="250" src={{org.photos[0].medium}} *ngIf="org.photos[0]; else missingPhoto">
+                    <ng-template #missingPhoto>
+                        <img width="200" height="250" src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Missing_dog_photo.png" alt="missing image">
+                    </ng-template>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
