--- a/pawpers-angular/src/app/dog-search/dog-search.component.html
+++ b/pawpers-angular/src/app/dog-search/dog-search.component.html
@@ -10,7 +10,7 @@
                 </div>
             </form>
             <p class="error">{{displayMessage2}}</p>
-        
+
 
 
             <form #breedSearch="ngForm" (ngSubmit)="breedSearchOnClick(breedSearch.value)">
@@ -21,7 +21,8 @@
                     </div>
                 </div>
             </form>
-          <p class="error">{{displayMessage1}}</p>
+            <p class="error">{{displayMessage1}}</p>
+        </div>
     </div>
 </section>
 
