--- a/pawpers-angular/src/app/front-page/front-page.component.html
+++ b/pawpers-angular/src/app/front-page/front-page.component.html
@@ -12,7 +12,7 @@
                 <div class="carousel-caption text-start">
                     <h1 class="text-light">Find your next best friend</h1>
                     <p class="text-light">Be happy. Save a dog!</p>
-                    <p><a class="btn btn-lg btn-dark" href='/dogsearch-page'>Search for a dog</a></p>
+                    <p><a class="btn btn-lg btn-dark" routerLink='dogsearch-page'>Search for a dog</a></p>
                 </div>
             </div>
         </div>
@@ -23,7 +23,7 @@
                 <div class="carousel-caption">
                     <h1>There are shelters in your city!</h1>
                     <p>Shelters everywhere are waiting for you to come in and rescue a puppy</p>
-                    <p><a class="btn btn-lg btn-primary" href="/sheltersearch-page">Search for a shelter</a></p>
+                    <p><a class="btn btn-lg btn-primary" routerLink="sheltersearch-page">Search for a shelter</a></p>
                 </div>
             </div>
         </div>
@@ -34,7 +34,7 @@
                 <div class="carousel-caption text-end">
                     <h1 class="text-dark">Fill out an adoption profile!</h1>
                     <p class="text-dark">We do the hard work for you! Send your adoption profile to a shelter with a click! Or print it out and bring it with you!</p>
-                    <p><a class="btn btn-lg btn-dark" href="/profile-page">Fill out a profile</a></p>
+                    <p><a class="btn btn-lg btn-dark" routerLink="profile-page">Fill out a profile</a></p>
                 </div>
             </div>
         </div>
@@ -83,8 +83,8 @@
             <div class="col-lg-6 mx-auto">
                 <p class="fs-5 mb-4">There are thousands of dogs waiting for their new home. Fill out a profile. Find a dog. Save a life. Be happy.</p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold" onclick="window.location.href='../topic-page'">Join the Community</button>
-                    <button type="button" class="btn btn-outline-light btn-lg px-4" onclick="window.location.href='../dogsearch-page'">Find a dog</button>
+                    <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold" routerLink="topic-page">Join the Community</button>
+                    <button type="button" class="btn btn-outline-light btn-lg px-4" routerLink="dogsearch-page">Find a dog</button>
                 </div>
             </div>
         </div>
