--- a/pawpers-angular/src/app/topic-page/topic-page.component.html
+++ b/pawpers-angular/src/app/topic-page/topic-page.component.html
@@ -18,7 +18,7 @@
 
                 <p class="pb-3 mb-0 small lh-sm border-bottom">
                     <strong class="d-block text-gray-dark">{{topic.profile.profileName}}</strong>
-                    <a href="../reply-page/{{topic.topicId}}">{{topic.topicName}}</a>
+                    <a routerLink="/reply-page/{{topic.topicId}}">{{topic.topicName}}</a>
                 </p>
             </div>
             <small class="d-block text-end mt-3">
