--- a/pawpers-angular/src/app/front-page/front-page.component.html
+++ b/pawpers-angular/src/app/front-page/front-page.component.html
@@ -83,8 +83,8 @@
             <div class="col-lg-6 mx-auto">
                 <p class="fs-5 mb-4">There are thousands of dogs waiting for their new home. Fill out a profile. Find a dog. Save a life. Be happy.</p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold" routerLink="topic-page">Join the Community</button>
-                    <button type="button" class="btn btn-outline-light btn-lg px-4" routerLink="dogsearch-page">Find a dog</button>
+                    <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold" routerLink="dogsearch-page">Find A Dog</button>
+                    <button type="button" class="btn btn-outline-light btn-lg px-4" routerLink="topic-page">Join The Community</button>
                 </div>
             </div>
         </div>
