--- a/pawpers-angular/src/app/profile-page/profile-page.component.html
+++ b/pawpers-angular/src/app/profile-page/profile-page.component.html
@@ -67,7 +67,7 @@
         </dl>
     </div>
 
-    <div class="album p-2 mt-4 bg-light" *ngIf="recommended?.length">
+    <div class="album p-2 mt-4 bg-light" *ngIf="recommended.length">
         <div class="container">
             <h3 class="text-dark">Recommended Dogs Based on Your Profile</h3>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-6 g-6">
